src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__season_details_ui__season_details_ui_tests__tests__snapshot_tests__empty_season_details_SeasonHistoryDetails_1.snap
---
source: src/ui/sonarr_ui/library/season_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Season 1 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Episodes │ History │ Manual Search                                                                                                    │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                 ╭────────────────────────────  Details  ────────────────────────────╮                                 │               
             │                                 │Source Title:                                                      │                                 │               
             │                                 │Event Type: unknown                                                │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │No additional data available                                       │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 │                                                                   │                                 │               
             │                                 ╰───────────────────────────────────────────────────────────────────╯                                 │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
